refactor: refactored plain aws session delete
chore: fixed plain aws session's create, get, update, and delete swagger
