# interface/http/controller/plain_aws_session_controller.go
@@ -5,32 +5,22 @@ import (
   "leapp_daemon/domain/session"
   "leapp_daemon/infrastructure/keychain"
   "leapp_daemon/infrastructure/logging"
-  "leapp_daemon/interface/http/controller/dto/request_dto/plain_aws_session_dto"
+  plain_aws_session_request_dto "leapp_daemon/interface/http/controller/dto/request_dto/plain_aws_session_dto"
   "leapp_daemon/interface/http/controller/dto/response_dto"
+  plain_aws_session_response_dto "leapp_daemon/interface/http/controller/dto/response_dto/plain_aws_session_dto"
   "leapp_daemon/use_case"
   "net/http"
 )
 
-// swagger:response getPlainAwsSessionResponse
-type getPlainAwsSessionResponseWrapper struct {
-	// in: body
-	Body getPlainAwsSessionResponse
-}
-
-type getPlainAwsSessionResponse struct {
-	Message string
-	Data    session.PlainAwsSession
-}
-
 func CreatePlainAwsSessionController(context *gin.Context) {
-	// swagger:route POST /session/plain session-plain-aws createPlainAwsSession
-	// Create a new plain aws session
+	// swagger:route POST /session/plain plainAwsSession createPlainAwsSession
+	// Create a new Plain AWS Session
 	//   Responses:
-	//     200: messageResponse
+	//     200: MessageResponse
 
 	logging.SetContext(context)
 
-	requestDto := plain_aws_session_dto.CreatePlainAwsSessionRequestDto{}
+	requestDto := plain_aws_session_request_dto.CreatePlainAwsSessionRequest{}
 	err := (&requestDto).Build(context)
 	if err != nil {
 		_ = context.Error(err)
@@ -48,19 +38,19 @@ func CreatePlainAwsSessionController(context *gin.Context) {
     return
   }
 
-	responseDto := response_dto.MessageOnlyResponseDto{Message: "success"}
+	responseDto := response_dto.MessageResponse{Message: "success"}
 	context.JSON(http.StatusOK, responseDto.ToMap())
 }
 
 func GetPlainAwsSessionController(context *gin.Context) {
-	// swagger:route GET /session/plain/{id} session-plain-aws getPlainAwsSession
+	// swagger:route GET /session/plain/{id} plainAwsSession getPlainAwsSession
 	// Get a Plain AWS Session
 	//   Responses:
-	//     200: getPlainAwsSessionResponse
+	//     200: GetPlainAwsSessionResponse
 
 	logging.SetContext(context)
 
-	requestDto := plain_aws_session_dto.GetPlainAwsSessionRequestDto{}
+	requestDto := plain_aws_session_request_dto.GetPlainAwsSessionRequestDto{}
 	err := (&requestDto).Build(context)
 	if err != nil {
 		_ = context.Error(err)
@@ -73,26 +63,30 @@ func GetPlainAwsSessionController(context *gin.Context) {
 		return
 	}
 
-	responseDto := response_dto.MessageAndDataResponseDto{Message: "success", Data: *sess}
+  responseDto := plain_aws_session_response_dto.GetPlainAwsSessionResponse{
+    Message: "success",
+    Data: *sess,
+  }
+
 	context.JSON(http.StatusOK, responseDto.ToMap())
 }
 
 func UpdatePlainAwsSessionController(context *gin.Context) {
-	// swagger:route PUT /session/plain/{id} session-plain-aws editPlainAwsSession
+	// swagger:route PUT /session/plain/{id} plainAwsSession updatePlainAwsSession
 	// Edit a Plain AWS Session
 	//   Responses:
-	//     200: messageResponse
+	//     200: MessageResponse
 
 	logging.SetContext(context)
 
-	requestUriDto := plain_aws_session_dto.UpdatePlainAwsSessionUriRequestDto{}
+	requestUriDto := plain_aws_session_request_dto.UpdatePlainAwsSessionUriRequest{}
 	err := (&requestUriDto).Build(context)
 	if err != nil {
 		_ = context.Error(err)
 		return
 	}
 
-	requestDto := plain_aws_session_dto.UpdatePlainAwsSessionRequestDto{}
+	requestDto := plain_aws_session_request_dto.UpdatePlainAwsSessionRequest{}
 	err = (&requestDto).Build(context)
 	if err != nil {
 		_ = context.Error(err)
@@ -115,50 +109,39 @@ func UpdatePlainAwsSessionController(context *gin.Context) {
 		return
 	}
 
-	responseDto := response_dto.MessageOnlyResponseDto{Message: "success"}
+	responseDto := response_dto.MessageResponse{Message: "success"}
 	context.JSON(http.StatusOK, responseDto.ToMap())
 }
 
 func DeletePlainAwsSessionController(context *gin.Context) {
-	// swagger:route DELETE /session/plain/{id} session-plain-aws deletePlainAwsSession
+	// swagger:route DELETE /session/plain/{id} plainAwsSession deletePlainAwsSession
 	// Delete a Plain AWS Session
 	//   Responses:
-	//     200: messageResponse
+	//     200: MessageResponse
 
-	/*
-			logging.SetContext(context)
+  logging.SetContext(context)
 
-			requestDto := plain_aws_session_dto.DeletePlainAwsSessionRequestDto{}
-			err := (&requestDto).Build(context)
-			if err != nil {
-				_ = context.Error(err)
-				return
-			}
+  requestDto := plain_aws_session_request_dto.DeletePlainAwsSessionRequest{}
+  err := (&requestDto).Build(context)
+  if err != nil {
+    _ = context.Error(err)
+    return
+  }
 
-		  configurationService := use_case.facade{
-		    ConfigurationRepository: &repository.FileConfigurationRepository{
-		      FileSystem: &file_system.FileSystem{},
-		      Encryption: &encryption.Encryption{},
-		    },
-		  }
+  err = session.GetPlainAwsSessionsFacade().RemovePlainAwsSession(requestDto.Id)
+  if err != nil {
+    _ = context.Error(err)
+    return
+  }
 
-		  configuration, err := configurationService.Get()
-		  if err != nil {
-		    _ = context.Error(err)
-		    return
-		  }
-
-		  configuration.
-
-			responseDto := response_dto.MessageOnlyResponseDto{Message: "success"}
-			context.JSON(http.StatusOK, responseDto.ToMap())
-	*/
+  responseDto := response_dto.MessageResponse{Message: "success"}
+  context.JSON(http.StatusOK, responseDto.ToMap())
 }
 
 func StartPlainAwsSessionController(context *gin.Context) {
 	logging.SetContext(context)
 
-	requestDto := plain_aws_session_dto.StartPlainAwsSessionRequestDto{}
+	requestDto := plain_aws_session_request_dto.StartPlainAwsSessionRequestDto{}
 	err := (&requestDto).Build(context)
 	if err != nil {
 		_ = context.Error(err)
@@ -172,14 +155,14 @@ func StartPlainAwsSessionController(context *gin.Context) {
 		return
 	}
 
-	responseDto := response_dto.MessageOnlyResponseDto{Message: "success"}
+	responseDto := response_dto.MessageResponse{Message: "success"}
 	context.JSON(http.StatusOK, responseDto.ToMap())
 }
 
 func StopPlainAwsSessionController(context *gin.Context) {
 	logging.SetContext(context)
 
-	requestDto := plain_aws_session_dto.StopPlainAwsSessionRequestDto{}
+	requestDto := plain_aws_session_request_dto.StopPlainAwsSessionRequestDto{}
 	err := (&requestDto).Build(context)
 	if err != nil {
 		_ = context.Error(err)
@@ -193,6 +176,6 @@ func StopPlainAwsSessionController(context *gin.Context) {
 		return
 	}
 
-	responseDto := response_dto.MessageOnlyResponseDto{Message: "success"}
+	responseDto := response_dto.MessageResponse{Message: "success"}
 	context.JSON(http.StatusOK, responseDto.ToMap())
 }
